# civic-cli-tools

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  topics.toml
.claude/: skills
.github/workflows/: test.yml
.night-nurse/: config.json
civic/: pyproject.toml  report.md
civic-agentcy-2/civic/: README.md  pyproject.toml
civic-agentcy-2/civic/src/civic/: crew.py  main.py
civic-agentcy-2/civic/src/civic/config/: tasks.yaml
civic/src/civic/: crew.py
src/: _agent_cli.py  agents.py  cli.py  output.py  output_signals.py  prompts.py  scopes.py  tools.py
src/tools/: __init__.py  base.py  declarations.py  implementations.py  models.py  registry.py
tests/: test_agents.py  test_cli.py  test_models.py  test_output_signals.py  test_scopes.py  test_tools.py
