[project]
name = "civic-cli-tools"
version = "0.3.0"
description = "Policy research CLI using Gemini and Exa"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "exa-py>=1.0",
    "httpx>=0.27",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.scripts]
civic = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
sources = ["src"]
