[project]
name = "civic"
version = "0.1.0"
description = "civic using crewAI"
authors = [
    { name = "Ali Madad", email = "ali@scty.org" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.152.0",
    "python-dotenv",
]

[project.scripts]
civic = "civic.main:run"
run_crew = "civic.main:run"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
